--- a/vignettes/episensr.Rmd
+++ b/vignettes/episensr.Rmd
@@ -42,7 +42,7 @@ Functions available in `episensr` are:
 * `bootstrap`: Bootstrap resampling for selection and misclassification bias
 * `multidimBias`: Multidimensional bias analysis
 * `probsens.sel`: Probabilistic analysis for selection bias
-* `probsens.conf`: Probabilistic analysis for unmeasured confounding
+* `probsens_conf`: Probabilistic analysis for unmeasured confounding
 * `probsens`: Probabilistic analysis for misclassification
 * `probsens.irr.conf`: Probabilistic analysis for unmeasured confounding of person-time data
 * `probsens.irr`: Probabilistic analysis for exposure misclassification of person-time data
@@ -210,13 +210,13 @@ These bias parameters were assumed to be nondifferential.
 Here's the code with `episensr`:
 
 ```{r cov_misclass}
-misclassification.cov(array(c(1319, 38054, 5641, 405546, 565, 3583,
-                              781, 21958, 754, 34471, 4860, 383588),
-                            dimnames = list(c("Twins+", "Twins-"),
-                                            c("Folic acid+", "Folic acid-"),
-                                            c("Total", "IVF+", "IVF-")),
-                            dim = c(2, 2, 3)),
-                      bias_parms = c(.6, .6, .95, .95))
+misclass_cov(array(c(1319, 38054, 5641, 405546, 565, 3583,
+                     781, 21958, 754, 34471, 4860, 383588),
+                   dimnames = list(c("Twins+", "Twins-"),
+                                   c("Folic acid+", "Folic acid-"),
+                                   c("Total", "IVF+", "IVF-")),
+                   dim = c(2, 2, 3)),
+             bias_parms = c(.6, .6, .95, .95))
 ```
 
 While the non-adjusted analysis showed that women taking folic acid were 2.44
