--- a/vignettes/c_multiple_bias.Rmd
+++ b/vignettes/c_multiple_bias.Rmd
@@ -37,16 +37,16 @@ and self-reported use, leading to misclassification:
 ```{r misclass_chien}
 library(episensr)
 chien %>%
-    misclassification(., type = "exposure", bias_parms = c(.56, .58, .99, .97))
+    misclass(., type = "exposure", bias_parms = c(.56, .58, .99, .97))
 ```
 
 Controls and cases also enrolled into the study at different rates.
 We can combine the misclassification bias with a selection bias thanks to the
-function `multiple.bias`:
+function `multiple.bias()`:
 
 ```{r misclass_sel}
 chien %>%
-    misclassification(., type = "exposure", bias_parms = c(.56, .58, .99, .97)) %>%
+    misclass(., type = "exposure", bias_parms = c(.56, .58, .99, .97)) %>%
     multiple.bias(., bias_function = "selection", bias_parms = c(.73, .61, .82, .76))
 ```
 
@@ -58,7 +58,7 @@ physical activity):
 
 ```{r misclass_sel_conf}
 chien %>%
-    misclassification(., type = "exposure", bias_parms = c(.56, .58, .99, .97)) %>%
+    misclass(., type = "exposure", bias_parms = c(.56, .58, .99, .97)) %>%
     multiple.bias(., bias_function = "selection",
                   bias_parms = c(.73, .61, .82, .76)) %>%
     multiple.bias(., bias_function = "confounders",
@@ -81,7 +81,11 @@ mod1 <- chien %>%
 mod1
 ```
 ```{r plot2, warning=FALSE,message=FALSE,fig.width=6,fig.height=4}
-plot(mod1, "or")
+plot(mod1, "or_tot")
+```
+
+```{r plot2_forest, warning=FALSE,message=FALSE,fig.width=6,fig.height=4}
+plot(mod1, "forest_or")
 ```
 
 * Selection bias
@@ -90,15 +94,15 @@ plot(mod1, "or")
 set.seed(123)
 mod2 <- chien %>%
     probsens.sel(., reps = 100000,
-                 case.exp = list("beta", c(8.08, 24.25)),
-                 case.nexp = list("trapezoidal", c(.75, .85, .95, 1)),
-                 ncase.exp = list("beta", c(12.6, 50.4)),
-                 ncase.nexp = list("trapezoidal", c(0.7, 0.8, 0.9, 1)))
+                 case_exp = list("beta", c(8.08, 24.25)),
+                 case_nexp = list("trapezoidal", c(.75, .85, .95, 1)),
+                 ncase_exp = list("beta", c(12.6, 50.4)),
+                 ncase_nexp = list("trapezoidal", c(0.7, 0.8, 0.9, 1)))
 mod2
 ```
 
 ```{r plot3, warning=FALSE,message=FALSE,fig.width=6,fig.height=4}
-#plot(mod2, "or")
+plot(mod2, "forest_or")
 ```
 
 * Confounding
@@ -106,22 +110,22 @@ mod2
 ```{r multi_prob3}
 set.seed(123)
 mod3 <- chien %>%
-    probsens.conf(., reps = 100000,
-                  prev.exp = list("beta", c(24.9, 58.1)),
-                  prev.nexp = list("beta", c(42.9, 54.6)),
+    probsens_conf(., reps = 100000,
+                  prev_exp = list("beta", c(24.9, 58.1)),
+                  prev_nexp = list("beta", c(42.9, 54.6)),
                   risk = list("trapezoidal", c(.2, .58, 1.01, 1.24)))
 mod3
 ```
 
 ```{r plot4, message=FALSE, warning=FALSE,fig.width=6,fig.height=4}
-#plot(mod3, "or")
+plot(mod3, "forest_or")
 ```
 
 * Misclassification then selection
 
 ```{r multi_ms}
 set.seed(123)
-chien %>%
+test <- chien %>%
     probsens(., type = "exposure", reps = 100000,
              seca = list("trapezoidal", c(.45, .5, .6, .65)),
              seexp = list("trapezoidal", c(.4, .48, .58, .63)),
@@ -129,10 +133,15 @@ chien %>%
              spexp = list("trapezoidal", c(.96, .98, .99, 1)),
              corr_se = .8, corr_sp = .8) %>%
     multiple.bias(., bias_function = "probsens.sel",
-                  case.exp = list("beta", c(8.08, 24.25)),
-                  case.nexp = list("trapezoidal", c(.75, .85, .95, 1)),
-                  ncase.exp = list("beta", c(12.6, 50.4)),
-                  ncase.nexp = list("trapezoidal", c(0.7, 0.8, 0.9, 1)))
+                  case_exp = list("beta", c(8.08, 24.25)),
+                  case_nexp = list("trapezoidal", c(.75, .85, .95, 1)),
+                  ncase_exp = list("beta", c(12.6, 50.4)),
+                  ncase_nexp = list("trapezoidal", c(0.7, 0.8, 0.9, 1)))
+test
+probsens.sel(round(a, 0), reps = 1000, case_exp = list("beta", c(8.08, 24.25)),
+                  case_nexp = list("trapezoidal", c(.75, .85, .95, 1)),
+                  ncase_exp = list("beta", c(12.6, 50.4)),
+                  ncase_nexp = list("trapezoidal", c(0.7, 0.8, 0.9, 1)))
 ```
 
 * Misclassification, selection, and confounding
@@ -147,13 +156,13 @@ mod6 <- chien %>%
              spexp = list("trapezoidal", c(.96, .98, .99, 1)),
              corr_se = .8, corr_sp = .8) %>%
     multiple.bias(., bias_function = "probsens.sel",
-                  case.exp = list("beta", c(8.08, 24.25)),
-                  case.nexp = list("trapezoidal", c(.75, .85, .95, 1)),
-                  ncase.exp = list("beta", c(12.6, 50.4)),
-                  ncase.nexp = list("trapezoidal", c(0.7, 0.8, 0.9, 1))) %>%
-    multiple.bias(., bias_function = "probsens.conf",
-                  prev.exp = list("beta", c(24.9, 58.1)),
-                  prev.nexp = list("beta", c(42.9, 54.6)),
+                  case_exp = list("beta", c(8.08, 24.25)),
+                  case_nexp = list("trapezoidal", c(.75, .85, .95, 1)),
+                  ncase_exp = list("beta", c(12.6, 50.4)),
+                  ncase_nexp = list("trapezoidal", c(0.7, 0.8, 0.9, 1))) %>%
+    multiple.bias(., bias_function = "probsens_conf",
+                  prev_exp = list("beta", c(24.9, 58.1)),
+                  prev_nexp = list("beta", c(42.9, 54.6)),
                   risk = list("trapezoidal", c(.2, .58, 1.01, 1.24)))
 mod6
 ```
